--- a/css/klaudd.css
+++ b/css/klaudd.css
@@ -5,3 +5,14 @@
 .main-stuff {
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
