--- a/css/klaudd.css
+++ b/css/klaudd.css
@@ -39,13 +39,19 @@ input[type="file"] {
     padding: 2px 16px;
 }
 
+.cardcontainer img {
+    border: 0px !important;
+    border-radius: 15px;
+    box-shadow: 2px 6px 10px 0 rgba(0,0,0,0.2);
+    padding-bottom: 5px;
+}
+
 .profileimage {
-    border-radius: 50%;
-    border-style:solid;
-    border-width: 3px;
-    border-color: black;
+    border-radius: 50% !important;
+    border-style: solid !important;
+    border-width: 3px !important;
+    border-color: black !important;
     position: absolute; 
     top: 2px; 
     left: 2px;
-    box-shadow: 0 6px 10px 0 rgba(0,0,0,0.2);
 }
